<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BabyFood</string>
    <string name="app_Title">BabyFood</string>
    <string name="addFood_Button">Añadir alimento</string>
    <string name="profile_Button">Editar perfil</string>
    <string name="foodRegister_Button">Registro de alimentos</string>
    <string name="exploreRecipes_Button">Explorar recetas</string>
    <string name="photo">Foto</string>
    <string name="name">Nombre</string>
    <string name="comment">Comentario</string>
    <string name="date">Fecha</string>
    <string name="category">Categoría</string>
    <string name="foodRegister">Registro de alimentos</string>
    <string name="peso">Peso</string>
    <string name="alergias_intolerancias">Alergias o intolerancias</string>
    <string name="enviar_button">Enviar</string>

    <string-array name="food_categories">
        <item>Todas</item>
        <item>Verduras </item>
        <item>Frutas</item>
        <item>Cereales</item>
        <item>Huevos </item>
        <item>Lacteos</item>
        <item>Carnes</item>
        <item>Pescado</item>
        <item>Legumbres</item>
        <item>Bolleria</item>
    </string-array>
    <string-array name="notification_foods">
        <item>Zanahoria</item>
        <item>Manzana</item>
        <item>Pollo</item>
        <item>Pera</item>
        <item>Merluza</item>
        <item>Plátano</item>
        <item>Ternera</item>
        <item>Guisantes</item>
    </string-array>

    <string name="Plus">+</string>
    <string name="Breakfast">Desayuno</string>
    <string name="Lunch">Almuerzo</string>
    <string name="Snack">Merienda</string>
    <string name="Dinner">Cena</string>

    <string name="buscador">Buscador</string>
    <string name="favoritos">Favoritos</string>
    <string name="volver">Volver</string>
    <string name="ingredientes">Ingredientes</string>
    <string name="preparacion">Preparación</string>
    <string name="buscar_alimento">Buscar alimento...</string>
    <string name="continuar">Continuar</string>
    <string name="me_gusta">Me gusta</string>
    <string name="añadir_al_calendario">Añadir al calendario</string>
    <string name="alimento">Alimento</string>

</resources>