<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:background="#F7EDFB">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigation">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="24dp">

            <!--foto-->
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ImagenBebe"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/imagen_bebe"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="60dp"
                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/CircleImageView"
                android:contentDescription="foto del bebé"/>

            <!-- Mensaje de Bienvenida -->
            <TextView
                android:id="@+id/welcomeMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="¡Hola!"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ImagenBebe" />

            <!--Boton editar perfil-->
            <TextView
                android:id="@+id/perfilButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@id/welcomeMessage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="4dp"
                android:text="@string/profile_Button"
                android:onClick="profileChange"/>

            <!-- CARD REGISTRO ALIMENTOS -->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_food_registration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="6dp"
                app:layout_constraintTop_toBottomOf="@id/perfilButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">

                        <TextView
                            android:id="@+id/Food_Registration"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/foodRegister_Button"
                            android:textSize="18sp"
                            android:textStyle="bold"/>

                        <ImageView
                            android:id="@+id/next_button"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/arrow_forward"
                            android:contentDescription="Ir al registro"
                            android:onClick="foodRegister"/>
                    </LinearLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/addAlimento_button"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/addFood_Button"
                        android:onClick="addFood"
                        style="@style/addAlimento"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <!-- CARD GRÁFICA PESO -->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_weight_chart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="6dp"
                app:layout_constraintTop_toBottomOf="@+id/card_food_registration"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="20dp"
                    android:gravity="center_vertical"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="openWeightChart">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Historial de Peso"
                            android:textSize="18sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Ver evolución en gráfica"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/arrow_forward"
                        android:contentDescription="Ver gráfica" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <!-- CARD RECETAS -->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_recetas"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="6dp"
                app:layout_constraintTop_toBottomOf="@+id/card_weight_chart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="20dp"
                    android:gravity="center_vertical"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="openRecipes">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Explorar recetas"
                            android:textSize="18sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Descubre ideas saludables"
                            android:textSize="14sp"/>
                    </LinearLayout>

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/arrow_forward"
                        android:contentDescription="Ir a recetas"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@android:color/white"
        app:itemIconSize="26dp"
        app:itemIconTint="@color/bottom_nav_colors"
        app:itemTextColor="@color/bottom_nav_colors"
        app:menu="@menu/bottom_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:labelVisibilityMode="unlabeled"/>

</androidx.constraintlayout.widget.ConstraintLayout>